# cs50-finance

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  finance.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
static/: styles.css
templates/: buy.html  history.html  index.html  quoted.html  register.html  sell.html
