[tool.poetry]
name = "cs50-finance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.6"
cs50 = "^9.2.2"
Flask = "^2.2.2"
Flask-Session = "^0.4.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
